--- a/package.json
+++ b/package.json
@@ -10,11 +10,17 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@hookform/resolvers": "^5.0.1",
     "@radix-ui/react-accordion": "^1.2.8",
+    "date-fns": "^4.1.0",
+    "framer-motion": "^12.9.4",
     "lucide-react": "^0.344.0",
     "react": "^18.3.1",
+    "react-day-picker": "^9.6.7",
     "react-dom": "^18.3.1",
-    "react-router-dom": "^7.5.3"
+    "react-hook-form": "^7.56.2",
+    "react-router-dom": "^7.5.3",
+    "zod": "^3.24.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.1",
