--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "@hookform/resolvers": "^5.0.1",
     "@radix-ui/react-accordion": "^1.2.8",
+    "@tanstack/react-query": "^5.75.2",
+    "axios": "^1.9.0",
     "date-fns": "^4.1.0",
     "framer-motion": "^12.9.4",
     "lucide-react": "^0.344.0",
