--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.56.2",
     "react-router-dom": "^7.5.3",
+    "sonner": "^2.0.3",
     "zod": "^3.24.3"
   },
   "devDependencies": {
