--- a/package.json
+++ b/package.json
@@ -12,8 +12,12 @@
   "dependencies": {
     "@hookform/resolvers": "^5.0.1",
     "@radix-ui/react-accordion": "^1.2.8",
+    "@radix-ui/react-alert-dialog": "^1.1.13",
+    "@radix-ui/react-slot": "^1.2.2",
     "@tanstack/react-query": "^5.75.2",
     "axios": "^1.9.0",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "framer-motion": "^12.9.4",
     "lucide-react": "^0.344.0",
@@ -23,6 +27,8 @@
     "react-hook-form": "^7.56.2",
     "react-router-dom": "^7.5.3",
     "sonner": "^2.0.3",
+    "tailwind-merge": "^3.3.0",
+    "tailwindcss-animate": "^1.0.7",
     "zod": "^3.24.3"
   },
   "devDependencies": {
